add categorias e produtos

--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,11 @@
 </head>
 <body>
   <header class="navbar">
-    <div class="logo">ÁGUA DOCE BOUTIQUE</div>
+      <div class="logo">ÁGUA DOCE BOUTIQUE</div>
+    
     <nav class="menu">
-      <a href="categorias/feminino.html">Feminino</a>
-      <a href="categorias/masculino.html">Masculino</a>
+      <a href="categorias/feminino/feminino.html">Feminino</a>
+      <a href="categorias/masculino/masculino.html">Masculino</a>
       <a href="sobre.html">Sobre</a>
       <a href="contato.html">Contato</a>
     </nav>
@@ -20,6 +21,16 @@
   <section class="hero">
     <h1>Bem-vindo ao Catálogo Água Doce Boutique</h1>
     <p>Confira nossa nova coleção</p>
+    <div class="genero">
+      <a href="categorias/masculino/masculino.html">
+        <img src="imagens/card_masculino.jpeg" alt="masc_card">
+      </a>
+      <a href="categorias/feminino/feminino.html">
+        <img src="imagens/feminino_card.jpeg" alt="fem_card">
+      </a>
+    </div>
+
+
   </section>
 
   <footer class="footer">
