--- a/src/categorias/feminino/feminino.html
+++ b/src/categorias/feminino/feminino.html
@@ -3,18 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <title>Feminino</title>
-  <link rel="stylesheet" href="../css/style.css">
-  <link rel="stylesheet" href="styleCategoria.css">
+  <link rel="stylesheet" href="../../css/style.css">
+  <link rel="stylesheet" href="../styleCategoria.css">
 </head>
 <body>
   <header class="navbar">
     <div class="logo">ÁGUA DOCE BOUTIQUE</div>
     <nav class="menu">
-      <a href="../index.html">Home</a>
+      <a href="../../index.html">Home</a>
       <a href="feminino.html">Feminino</a>
-      <a href="masculino.html">Masculino</a>
-      <a href="../sobre.html">Sobre</a>
-      <a href="../contato.html">Contato</a>
+      <a href="../masculino/masculino.html">Masculino</a>
+      <a href="../../sobre.html">Sobre</a>
+      <a href="../../contato.html">Contato</a>
     </nav>
   </header>
   <section class="produtos">
