--- a/src/sobre.html
+++ b/src/sobre.html
@@ -10,8 +10,8 @@
     <div class="logo">ÁGUA DOCE BOUTIQUE</div>
     <nav class="menu">
       <a href="index.html">Home</a>
-      <a href="categorias/feminino.html">Feminino</a>
-      <a href="categorias/masculino.html">Masculino</a>
+      <a href="categorias/feminino/feminino.html">Feminino</a>
+      <a href="categorias/masculino/masculino.html">Masculino</a>
       <a href="sobre.html">Sobre</a>
       <a href="contato.html">Contato</a>
     </nav>
