update feminino & masculino

--- a/src/categorias/masculino/masculino.html
+++ b/src/categorias/masculino/masculino.html
@@ -21,7 +21,7 @@
   <section class="hero">
     <div class="categorias">
       <a href="casaco-jaqueta.html">
-        <img src="../../imagens/casacos&jaquetas_masc.jpg" alt="cas&jaq">
+        <img src="../../imagens/casacos&jaquetas_masc.jpg" alt="casJaq_masc">
       </a>
       <a href="polo.html">
         <img src="../../imagens/polos_masc.jpg" alt="polosMasc">
