--- a/src/index.html
+++ b/src/index.html
@@ -18,19 +18,17 @@
     </nav>
   </header>
 
+  <img src="imagens/lancamentos_inverno.jpg" width="100%">
+  
   <section class="hero">
-    <h1>Bem-vindo ao Catálogo Água Doce Boutique</h1>
-    <p>Confira nossa nova coleção</p>
     <div class="genero">
       <a href="categorias/masculino/masculino.html">
-        <img src="imagens/card_masculino.jpeg" alt="masc_card">
+        <img src="imagens/card_masculino.jpg" alt="masc_card">
       </a>
       <a href="categorias/feminino/feminino.html">
-        <img src="imagens/feminino_card.jpeg" alt="fem_card">
+        <img src="imagens/feminino_card.jpg" alt="fem_card">
       </a>
     </div>
-
-
   </section>
 
   <footer class="footer">
