--- a/src/categorias/feminino/feminino.html
+++ b/src/categorias/feminino/feminino.html
@@ -17,16 +17,22 @@
       <a href="../../contato.html">Contato</a>
     </nav>
   </header>
-  <section class="produtos">
-    <div class="card">
-      <img src="../imagens/camiseta.jpg" alt="Camiseta">
-      <h3><a href="../produto/produto.html">Camiseta Básica</a></h3>
-      <p>R$ 49,90</p>
-    </div>
-    <div class="card">
-      <img src="../imagens/camiseta.jpg" alt="Camiseta">
-      <h3>Camiseta Estampada</h3>
-      <p>R$ 59,90</p>
+
+  <section class="hero">
+    <div class="categorias">
+      <a href="">
+        <img src="../../imagens/feminino/casacosJaquetas_fem.jpg" alt="casJaq_fem">
+      </a>
+      <a href="">
+        <img src="../../imagens/feminino/camisasRegatas_fem.jpg" alt="camReg_fem">
+      </a>
+      <a href="">
+        <img src="../../imagens/feminino/jeansSarja_fem.jpg" alt="jeansSarja_fem">
+      </a>
+      <a href="">
+        <img src="../../imagens/feminino/conjuntos_fem.jpg" alt="conjuntos_fem">
+      </a>
+
     </div>
   </section>
 </body>
