update footer & add interaction card

--- a/src/contato.html
+++ b/src/contato.html
@@ -18,7 +18,12 @@
   </header>
   <section class="hero">
     <h1>Fale Conosco</h1>
-    <p>Email: contato@hering.com.br</p>
+    <p>Email: contato@aguadoce.com.br</p>
   </section>
+
+  <footer class="footer">
+    <p>&copy; 2025 Água Doce Boutique. Todos os direitos reservados.</p>
+    <h5>Água Doce Boutique. Rua Frâncisco Cândido de Souza, 43, Nova Resende - MG</h5>
+  </footer>
 </body>
 </html>
