--- a/src/sobre.html
+++ b/src/sobre.html
@@ -16,9 +16,22 @@
       <a href="contato.html">Contato</a>
     </nav>
   </header>
-  <section class="hero">
-    <h1>Sobre a Água Doce Boutique</h1>
-    <p>Empresa com décadas de tradição em moda brasileira.</p>
+  <section class="about">
+    <h3>Sobre a Água Doce Boutique</h3>
+    <h5>
+      somos uma loja de roupas que busca oferecer estilo, conforto e 
+      qualidade para todos os momentos do seu dia. Nossa boutique é um espaço 
+      pensado para quem valoriza a moda e bom atendimento. <br>
+      Somos revendedores autorizados da marca Hering, reconhecida nacionalmente
+      pela sua tradição e versatilidade, mas também trabalhamos com outras marcas 
+      selecionadas para oferecer um mix variado de peças que combinam com diferentes
+      estilos e ocasiões.
+    </h5>
   </section>
+
+  <footer class="footer">
+    <p>&copy; 2025 Água Doce Boutique. Todos os direitos reservados.</p>
+    <h5>Água Doce Boutique. Rua Frâncisco Cândido de Souza, 43, Nova Resende - MG</h5>
+  </footer>
 </body>
 </html>
