--- a/src/categorias/masculino/masculino.html
+++ b/src/categorias/masculino/masculino.html
@@ -34,5 +34,10 @@
       </a>
     </div>
   </section>
+
+  <footer class="footer">
+    <p>&copy; 2025 Água Doce Boutique. Todos os direitos reservados.</p>
+    <h5>Água Doce Boutique. Rua Frâncisco Cândido de Souza, 43, Nova Resende - MG</h5>
+  </footer>
 </body>
 </html>
