--- a/src/index.html
+++ b/src/index.html
@@ -30,9 +30,9 @@
       </a>
     </div>
   </section>
-
   <footer class="footer">
     <p>&copy; 2025 Água Doce Boutique. Todos os direitos reservados.</p>
+    <h5>Água Doce Boutique. Rua Frâncisco Cândido de Souza, 43, Nova Resende - MG</h5>
   </footer>
 </body>
 </html>
