--- a/src/categorias/masculino/casaco-jaqueta.html
+++ b/src/categorias/masculino/casaco-jaqueta.html
@@ -20,11 +20,9 @@
       </header>
 
       <section class="hero">
-        <section class="produtos" id="produtos-container">
-            
-        </section>
-          <script src="../../js/loadProducts.js"></script>
+        <section class="produtos" id="produtos-container"></section>
 
+        <script src="../../js/loadProducts.js"></script>
       </section>
 </body>
 </html>
