finishing cat feminino

--- a/src/categorias/feminino/feminino.html
+++ b/src/categorias/feminino/feminino.html
@@ -23,13 +23,13 @@
       <a href="casacos_jaquetas_fem.html">
         <img src="../../imagens/feminino/casacosJaquetas_fem.jpg" alt="casJaq_fem">
       </a>
-      <a href="">
-        <img src="../../imagens/feminino/camisasRegatas_fem.jpg" alt="camReg_fem">
+      <a href="camisetas_regatas_fem.html">
+        <img src="../../imagens/feminino/camisetasRegatas_fem.jpg" alt="camReg_fem">
       </a>
-      <a href="">
+      <a href="jeans_sarja_fem.html">
         <img src="../../imagens/feminino/jeansSarja_fem.jpg" alt="jeansSarja_fem">
       </a>
-      <a href="">
+      <a href="camisas_fem.html">
         <img src="../../imagens/feminino/conjuntos_fem.jpg" alt="conjuntos_fem">
       </a>
     </div>
