--- a/src/categorias/masculino/calcasMasc.html
+++ b/src/categorias/masculino/calcasMasc.html
@@ -17,5 +17,15 @@
           <a href="../../contato.html">Contato</a>
         </nav>
       </header>
+
+    <section class="hero">
+
+    </section>
+
+    <footer class="footer">
+      <p>&copy; 2025 Água Doce Boutique. Todos os direitos reservados.</p>
+      <h5>Água Doce Boutique. Rua Frâncisco Cândido de Souza, 43, Nova Resende - MG</h5>
+  </footer>
+
 </body>
 </html>
