--- a/src/categorias/masculino/casaco-jaqueta.html
+++ b/src/categorias/masculino/casaco-jaqueta.html
@@ -24,5 +24,13 @@
 
         <script src="../../js/loadProducts.js"></script>
       </section>
+      <section class="hero">
+
+    </section>
+
+    <footer class="footer">
+      <p>&copy; 2025 Água Doce Boutique. Todos os direitos reservados.</p>
+      <h5>Água Doce Boutique. Rua Frâncisco Cândido de Souza, 43, Nova Resende - MG</h5>
+  </footer>
 </body>
 </html>
