--- a/src/categorias/feminino/camisetas_regatas_fem.html
+++ b/src/categorias/feminino/camisetas_regatas_fem.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../css/style.css">
-    <title>polo</title>
+    <title>Camisetas - Regatas</title>
 </head>
 <body>
     <header class="navbar">
-      <div class="logo">ÁGUA DOCE BOUTIQUE</div>
-      <nav class="menu">
-        <a href="../../index.html">Home</a>
-        <a href="../feminino/feminino.html">Feminino</a>
-        <a href="masculino.html">Masculino</a>
-        <a href="../../sobre.html">Sobre</a>
-        <a href="../../contato.html">Contato</a>
-      </nav>
+        <div class="logo">ÁGUA DOCE BOUTIQUE</div>
+        <nav class="menu">
+          <a href="../../index.html">Home</a>
+          <a href="../feminino/feminino.html">Feminino</a>
+          <a href="../masculino/masculino.html">Masculino</a>
+          <a href="../../sobre.html">Sobre</a>
+          <a href="../../contato.html">Contato</a>
+        </nav>
     </header>
 
     <section class="hero">
@@ -25,6 +25,6 @@
     <footer class="footer">
       <p>&copy; 2025 Água Doce Boutique. Todos os direitos reservados.</p>
       <h5>Água Doce Boutique. Rua Frâncisco Cândido de Souza, 43, Nova Resende - MG</h5>
-  </footer>
+    </footer>
 </body>
 </html>
