--- a/src/categorias/feminino/casacos_jaquetas_fem.html
+++ b/src/categorias/feminino/casacos_jaquetas_fem.html
@@ -8,12 +8,12 @@
     <title>Casacos - Jaquetas</title>
 </head>
 <body>
-    <header>
+    <header class="navbar">
         <div class="logo">ÁGUA DOCE BOUTIQUE</div>
         <nav class="menu">
           <a href="../../index.html">Home</a>
           <a href="../feminino/feminino.html">Feminino</a>
-          <a href="masculino.html">Masculino</a>
+          <a href="../masculino/masculino.html">Masculino</a>
           <a href="../../sobre.html">Sobre</a>
           <a href="../../contato.html">Contato</a>
         </nav>
@@ -23,5 +23,10 @@
 
     </section>
 
+
+    <footer class="footer">
+        <p>&copy; 2025 Água Doce Boutique. Todos os direitos reservados.</p>
+        <h5>Água Doce Boutique. Rua Frâncisco Cândido de Souza, 43, Nova Resende - MG</h5>
+  </footer>
 </body>
 </html>
